--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
     </style>
 
     <style name="Theme.Things" parent="Base.Theme.Things" />
+
+    <style name="CustomButtonTheme" parent="Widget.AppCompat.Button">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/material_dynamic_neutral_variant30</item>
+    </style>
 </resources>
