--- a/app/src/main/res/layout/fragment_selected_list.xml
+++ b/app/src/main/res/layout/fragment_selected_list.xml
@@ -56,7 +56,7 @@
 
     <Button
         android:id="@+id/button_back"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/CustomButtonTheme"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -84,7 +84,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{viewModel.focusedCharacter.imageUrl}"
                 app:layout_constraintDimensionRatio="4:3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +95,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:text="@{viewModel.focusedCharacter.name}"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/character_image"
@@ -108,7 +106,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:text="@{viewModel.focusedCharacter.status}"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/character_name"
@@ -121,7 +118,6 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="@{viewModel.focusedCharacter.species}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +129,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="@{viewModel.focusedCharacter.gender}"
                 app:layout_constraintBottom_toBottomOf="@id/character_species"
                 app:layout_constraintStart_toEndOf="@id/character_species"
                 app:layout_constraintTop_toTopOf="@id/character_species"
