--- a/app/src/main/res/layout/fragment_selection.xml
+++ b/app/src/main/res/layout/fragment_selection.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectedListFragment">
+    tools:context=".ui.selection.SelectionFragment">
 
     <ImageView
         android:layout_width="0dp"
